[build-system]
requires = [
    "setuptools>=61.0",
    "matplotlib>=3.6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "coordinate-canvas"
version = "1.3.0"
authors = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
description = "A matplotlib-based canvas that allows line drawing and coordinate retrieval."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/erlete/coordinate-canvas"
"Bug Tracker" = "https://github.com/erlete/coordinate-canvas/issues"
