[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "coordinate-canvas"
version = "1.4.1"
authors = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
description = "A matplotlib-based canvas that allows line drawing and coordinate retrieval."
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib",
    "bidimensional>=1.9.0"
]

[project.urls]
"Homepage" = "https://github.com/erlete/coordinate-canvas"
"Bug Tracker" = "https://github.com/erlete/coordinate-canvas/issues"
