[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinate-canvas"
version = "1.4.1"
description = "Matplotlib-based canvas that allows line drawing and coordinate retrieval"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11.6"
authors = [{ name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com" }]
maintainers = [{ name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

dependencies = ["matplotlib>=3.8.2", "bidimensional>=1.9.1"]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-html==4.1.1",
    "pycodestyle==2.11.1",
    "pydocstyle==6.3.0",
    "mypy==1.7.0",
    "flake8==6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/erlete/coordinate-canvas"
"Bug Tracker" = "https://github.com/erlete/coordinate-canvas/issues"
